--- a/src/components/HomePage/HeroBanner/HeroBanner.scss
+++ b/src/components/HomePage/HeroBanner/HeroBanner.scss
@@ -2,6 +2,9 @@
 	background-image: url('../../../../static/headback.png');
 	background-position: center center;
 	height: 70vh;
+	max-height: 800px;
+	background-repeat: no-repeat;
+	background-size: cover;
 	h1 {
 		font-family: 'Stardos Stencil', cursive;
 		font-weight: bold;
@@ -26,7 +29,24 @@
 	}
 }
 
-@media (max-width: 756px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+	.containerBackground {
+		height: 45vh;
+	}
+	h1 {
+		font-size: 3rem !important;
+		padding-bottom: 0px !important;
+	}
+	hr {
+		padding-bottom: 20px !important;
+	}
+	h2 {
+		font-size: 2.3rem !important;
+	}
+
+}
+
+@media (max-width: 767px) {
 	.containerBackground {
 		height: 50vh;
 	}
