--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -47,7 +47,7 @@ $background_color_greylighter: #ddd;
 	margin: 2px 10px;
 }
 
-@media (max-width: 756px) {
+@media (max-width: 767px) {
 	.showFeature {
 		display: block !important;
 	}
