--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Stardos+Stencil&display=swap');
 @import url('https://db.onlinewebfonts.com/c/cf85131ef1119a8d56e92cd8ff533995?family=Sylfaen');
 
+html,body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
